# Project-Artemis

./: .env.example  .gitignore  .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CmakeLists.txt  PythonRequirements.txt  README.md  main.cpp  vcpkg.json
Controller Input/: Makefile  controller.cpp
camara/: camara.ino
face_recognition/: mainx.py  requirements.txt
src/: Servo_Control.ino  main.cpp  src.cmake
src/Controller Input/: Makefile  PS4read  controller_linux  controller_linux.cpp  controller_windows.cpp  environment_manager.cpp  environment_manager.h  serial_port.cpp  serial_port.h  servo V3.ino  servo1.ino  servoV2.ino
src/Controller Input/servo/: servo.ino
src/Controller_Input/: .controller_linux.cpp.swp  Makefile  PS4read  controller.cpp  controller_linux.cpp  controller_linux.hpp  controller_windows.cpp  serial_port.cpp  serial_port.hpp
src/Controller_Input/servo/: servo.ino
src/client/: CmakeLists.txt  client.cpp  client.hpp
src/face_recognition/: Cmakelists.txt  main.cpp  mainx.py  vision.cpp  vision.hpp
src/face_recognition/faces/: changefileNames.sh  info.csv  label.py
src/voice_recognition/: Voicerecognition.cpp  Voicerecognition.py  voice.cpp  voice.hpp  voiceRecon.py  voiceTEST.cpp
webserver/: client.cpp
